# robot_description

./: CMakeLists.txt  README.md  package.xml
config/: rover_controller.yaml
launch/: robot_gazebo.launch.py  view_ur.launch.py
meshes/dae/: Cube.000.dae  Cube.001.dae  Cube.004.dae  Cube.006.dae  Cube.055.dae  Cube.056.dae  Cylinder.001.dae  Cylinder.002.dae  Cylinder.003.dae  Cylinder.004.dae  Cylinder.006.dae  Cylinder.008.dae  Cylinder.dae  Torus.001.dae  Torus.002.dae  Torus.003.dae  Torus.004.dae  Torus.005.dae  Torus.006.dae  Torus.007.dae  Torus.dae
rosbags/rosbag_floor/: acelerations_floor_0.db3  metadata.yaml
rosbags/rosbag_sand/: acelerations_sand_0.db3  metadata.yaml
rviz/: view_robot.rviz
src/: speed_controller.cpp
urdf/: robot.urdf  robot.urdf.xacro  ros2_control.urdf.xacro
